@@ -217,6 +217,7 @@ momentaneamente pero al irse el splash, se recargan
 Medium name: "....      "
 
 
--en visual real tape, con top speed, que actualice cada cierto tiempo la zona azul del bloque activo. sino, al estar top speed, no siempre al refrescar coincide con el dibujado de zona azul
 
 -ula settings visible en otras maquinas no-spectrum?
+
+-setting autorebobinado de cintas standard y real tape?
