@@ -1,6 +1,7 @@
 Version 10.1 - Carrier Command edition. 28 October 2021
 
 Added setting to change ULA Data bus value
+Added showing microdrive label when expanding qlay mdv files of size 174930
 Improved portability of shell scripts. Thanks to AndersonTorres
 Fixed segfault pressing F5 after pressing pause key
 Fixed preserve breakpoints state when doing smartload
